@@ -1,0 +1,58 @@
+// 
+// Gendarme.Rules.Performance.AvoidUnsealedUninheritedInternalClassesRule
+//
+// Authors:
+//	Scott Peterson <lunchtimemama@gmail.com>
+//
+// Copyright (C) 2008 Scott Peterson
+//
+// Permission is hereby granted, free of charge, to any person obtaining a copy
+// of this software and associated documentation files (the "Software"), to deal
+// in the Software without restriction, including without limitation the rights
+// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+// copies of the Software, and to permit persons to whom the Software is
+// furnished to do so, subject to the following conditions:
+//
+// The above copyright notice and this permission notice shall be included in
+// all copies or substantial portions of the Software.
+//
+// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+// THE SOFTWARE.
+
+using System;
+
+using Mono.Cecil;
+
+using Gendarme.Framework;
+using Gendarme.Framework.Rocks;
+
+namespace Gendarme.Rules.Performance {
+
+	public class AvoidUnsealedUninheritedInternalClassesRule : ITypeRule {
+
+		public MessageCollection CheckType (TypeDefinition type, Runner runner)
+		{
+			if (type.IsAbstract || type.IsSealed || type.IsVisible () || type.IsGeneratedCode ())
+				return runner.RuleSuccess;
+
+			foreach (TypeDefinition type_definition in type.Module.Types) {
+				// skip ourself
+				if (type_definition.FullName == type.FullName)
+					continue;
+				if (type_definition.Inherits (type.FullName))
+					return runner.RuleSuccess;
+			}
+
+			Message msg = new Message (
+				"Due to performance issues, types which are not visible outside of the " +
+				"assembly and which have no inherited types within the assembly should be sealed.",
+				new Location (type), MessageType.Error);
+			return new MessageCollection (msg);
+		}
+	}
+}
