@@ -25,6 +25,9 @@
     <File name="AvoidToStringOnStringsRule.cs" subtype="Code" buildaction="Compile" />
     <File name="DontIgnoreMethodResultRule.cs" subtype="Code" buildaction="Compile" />
     <File name="AvoidUnsealedConcreteAttributesRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidUnsealedUninheritedInternalClassesRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidReturningArraysOnPropertiesRule.cs" subtype="Code" buildaction="Compile" />
+    <File name="UseIsOperatorRule.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Assembly" localcopy="True" refto="../../../lib/Mono.Cecil.dll" />
